Using the right version of SC.Microsoft.Extensions.DependencyInjection.Abstractions (1.0) for 8.2.x

--- a/src/Sitecore.Support.166675/Sitecore.Support.166675.csproj
+++ b/src/Sitecore.Support.166675/Sitecore.Support.166675.csproj
@@ -40,8 +40,8 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="Microsoft.Extensions.DependencyInjection.Abstractions">
-      <HintPath>..\packages\SC.Microsoft.Extensions.DependencyInjection.Abstractions.8.2.3\lib\Microsoft.Extensions.DependencyInjection.Abstractions.dll</HintPath>
+    <Reference Include="Microsoft.Extensions.DependencyInjection.Abstractions, Version=1.0.0.0, Culture=neutral, PublicKeyToken=adb9793829ddae60, processorArchitecture=MSIL">
+      <HintPath>..\packages\SC.Microsoft.Extensions.DependencyInjection.Abstractions.8.2.1\lib\Microsoft.Extensions.DependencyInjection.Abstractions.dll</HintPath>
       <Private>False</Private>
     </Reference>
     <Reference Include="Microsoft.Web.Infrastructure">
