--- a/src/Sitecore.Support.166675/packages.config
+++ b/src/Sitecore.Support.166675/packages.config
@@ -1,6 +1,6 @@
-<?xml version="1.0" encoding="utf-8"?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="SC.Microsoft.Extensions.DependencyInjection.Abstractions" version="8.2.3" targetFramework="net452" />
+  <package id="SC.Microsoft.Extensions.DependencyInjection.Abstractions" version="8.2.1" targetFramework="net452" />
   <package id="SC.Microsoft.Web.Infrastructure" version="8.2.3" targetFramework="net452" />
   <package id="SC.Sitecore.Kernel" version="8.2.3" targetFramework="net452" />
   <package id="SC.Sitecore.Mvc" version="8.2.3" targetFramework="net452" />
